# formation-c-ubuntu

./: .gitignore  LICENSE  README.md  SOMMAIRE.md  module-01-l-ecosysteme-c-sous-linux.md  module-02-fondamentaux-du-langage.md  module-03-la-gestion-de-la-memoire.md  module-04-structures-de-donnees-et-modularite.md  module-05-outillage-devops-et-automatisation.md  module-06-programmation-systeme-linux.md  module-07-techniques-avancees-et-optimisation.md  module-08-c-dans-un-pipeline-ci-cd.md  module-09-projets-de-synthese-et-etudes-de-cas.md
01-ecosysteme-c-linux/: 01-pourquoi-le-c-en-2025.md  02-relation-c-unix-linux.md  03-normes-du-langage.md  03.1-focus-c23.md  03.2-verification-support-compilateur.md  03.3-c11-base-production.md  04-c-vs-cpp-vs-rust.md  README.md
02-configuration-environnement/: 01-installation-toolchain.md  02-versions-gcc.md  03-choix-ide-editeur.md  04-extensions-et-outils.md  05-devcontainers.md  05.1-quest-ce-quun-devcontainer.md  05.2-structure-devcontainer-json.md  05.3-configuration-outils.md  05.4-integration-vscode.md  05.5-devcontainers-source-verite.md  README.md
03-chaine-de-compilation/: 01-quatre-etapes.md  02-visualisation-pipeline.md  (+5 more)
13-build-systems/exemples/05_make_vs_cmake/: CMakeLists.txt  main.c  operations.c  operations.h
annexes/exemples/05-cmake/: CMakeLists.txt  COMPILER.md
annexes/exemples/05-cmake/include/: mon_projet.h
annexes/exemples/05-cmake/lib/: CMakeLists.txt  ma_lib.c
annexes/exemples/05-cmake/src/: CMakeLists.txt  main.c  utils.c
annexes/exemples/05-cmake/tests/: CMakeLists.txt  test_main.c
(+1344 files in other folders)
